# clawdbot

./: .gitignore  .oxfmtrc.jsonc  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.prod  README.md  SECURITY_ASSESSMENT_LOCAL.md  VERIFICATION.md  docker-compose.phala.yml  docker-entrypoint.sh  docker-setup.sh  install.bat  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.json  vitest.config.ts
.agent/workflows/: get-oauth-session-key.md
.claude/: memory.db
.claude/dev/: docs-review.md  docs-update.md
.github/: labeler.yml
.github/workflows/: ci.yml  install-smoke.yml  labeler.yml
.swarm/: memory.db  schema.sql
.workflow/: AGENTS.md
charts/clawdbot/: .helmignore  Chart.yaml  README.md  values.yaml
docs/: _config.yml  configuration.md  cron-bullmq.md  discord.md  docs.json  groups.md  index.md  internal-hooks.md  models.md  plugin.md  security.md  slack.md  telegram.md  testing.md  token-use.md  troubleshooting.md  vps.md
k8s/: ZALO-INTEGRATION.md  configmap.yaml
memory/: 2026-01-08.md
patches/: @buape__carbon@0.0.0-beta-20260109194934.patch  @mariozechner__pi-ai@0.42.1.patch  chat-delete-session.patch
scripts/: auto-reauth-claude-v2.sh  backup-complete.sh  bundle-a2ui.sh  bundle-a2ui.ts  format-staged.js  render-start.sh  run-node.mjs  test-parallel.mjs  voice-call-mock.ts  web_search_with_gemini.sh  wsl-portproxy.ps1  xtts-client.sh  xtts-voice.sh
skills/openai-image-gen/: pyproject.toml
src/: index.ts  utils.ts
src/tts/: tts.ts  (+4 more)
tmp/: secret-scanning-plan.md
ui/: package.json  windows-xp-soul.html
(+848 files in other folders)
